Fix major issues